<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="pax">Pax:</string>
    <string name="area">Area:</string>
    <string name="Smoking">Smoking</string>
    <string name="nonsmoke">Non-smoking</string>
    <string name="smoke">Smoking</string>
    <string name="nosmoke">Non-smoking</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="dt">DateTime:</string>
</resources>